--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "axios": "^0.21.1",
+    "bootstrap": "4.6.0",
+    "history": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
